--- a/ApiBurger_Application/ApiBurger_Application.csproj
+++ b/ApiBurger_Application/ApiBurger_Application.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiBurger_Business\ApiBurger_Business.csproj" />
+    <ProjectReference Include="..\ApiBurger_Domain\ApiBurger_Domain.csproj" />
   </ItemGroup>
 
 </Project>
