--- a/ApiBurger_Infraestructure/ApiBurger_Infraestructure.csproj
+++ b/ApiBurger_Infraestructure/ApiBurger_Infraestructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiBurger_Domain\ApiBurger_Domain.csproj" />
+  </ItemGroup>
+
 </Project>
