--- a/ApiBurger_Infraestructure/ApiBurger_Infraestructure.csproj
+++ b/ApiBurger_Infraestructure/ApiBurger_Infraestructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
   </ItemGroup>
 
